@@ -96,6 +96,7 @@ class Domains(object):
 			'type': 'domain',
 			'vnc': <boolean>,
 			'vnc_port': <int>,
+			'migration': <dict>,
 			}, ...]
 		"""
 
@@ -122,6 +123,7 @@ class Domains(object):
 						'description': domain['description'],
 						'node_available': domain['node_available'],
 						'error': domain['error'],
+						'migration': domain['migration'],
 					})
 			return domain_list
 
@@ -506,14 +508,19 @@ class Domains(object):
 
 		return:
 		"""
-		self.required_options(request, 'domainURI', 'targetNodeURI')
+		self.required_options(request, 'domainURI')
 		node_uri, domain_uuid = urldefrag(request.options['domainURI'])
+		mode = request.options.get('mode', 0)
+		if mode < 101 and mode > -1:
+			self.required_options(request, 'targetNodeURI')
+		target_uri = request.options.get('targetNodeURI', '')
 		self.uvmm.send(
 			'DOMAIN_MIGRATE',
 			self.process_uvmm_response(request),
 			uri=node_uri,
 			domain=domain_uuid,
-			target_uri=request.options['targetNodeURI']
+			target_uri=target_uri,
+			mode=mode
 		)
 
 	def domain_clone(self, request):
